--- a/Client.Avalonia/Client.Avalonia.csproj
+++ b/Client.Avalonia/Client.Avalonia.csproj
@@ -21,6 +21,7 @@
         <PackageReference Include="Avalonia" Version="11.0.0" />
         <PackageReference Include="Avalonia.Desktop" Version="11.0.0" />
         <PackageReference Include="Avalonia.Skia" Version="11.0.0" />
+        <PackageReference Include="Avalonia.Svg" Version="11.0.0" />
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0" />
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.0" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
@@ -44,9 +45,5 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Client.Core\Client.Core.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Models\" />
     </ItemGroup>
 </Project>
