--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
-/.idea
+.idea
+GravityExplorationV2.sln.DotSettings.user
+/.idea/.idea.GravityExplorationV2
