--- a/Client.Avalonia/Client.Avalonia.csproj
+++ b/Client.Avalonia/Client.Avalonia.csproj
@@ -31,6 +31,8 @@
         </PackageReference>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0" />
         <PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.10.0" />
+        <PackageReference Include="Material.Icons" Version="2.3.1" />
+        <PackageReference Include="Material.Icons.Avalonia" Version="2.3.1" />
         <PackageReference Include="OxyPlot.Avalonia" Version="2.1.0" />
         <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
         <PackageReference Include="Splat" Version="15.3.1" />
