Доработано отображение графиков

--- a/Client.Core/Client.Core.csproj
+++ b/Client.Core/Client.Core.csproj
@@ -15,10 +15,13 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="Scripts\chart.py">
+      <None Update="Scripts\mesh_chart.py">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="Scripts\mesh.py">
+      <None Update="Scripts\testing_chart.py">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Scripts\anomaly_chart.py">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
