--- a/ReverseProblem.Core/ReverseProblem.Core.csproj
+++ b/ReverseProblem.Core/ReverseProblem.Core.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DirectTask.Core\DirectTask.Core.csproj" />
       <ProjectReference Include="..\ReverseProblem.BornApproximation\ReverseProblem.BornApproximation.csproj" />
       <ProjectReference Include="..\ReverseProblem.GaussNewton\ReverseProblem.GaussNewton.csproj" />
     </ItemGroup>
