--- a/ReverseProblem.BornApproximation/ReverseProblem.BornApproximation.csproj
+++ b/ReverseProblem.BornApproximation/ReverseProblem.BornApproximation.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Installers\" />
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
