--- a/ReverseProblem.GaussNewton/ReverseProblem.GaussNewton.csproj
+++ b/ReverseProblem.GaussNewton/ReverseProblem.GaussNewton.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="8.2.0" />
+      <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
